@@ -102,7 +102,7 @@ B<Config::Objective>.  Its methods can be used to manipulate the
 encapsulated boolean value from the config file.
 
 The B<Config::Objective::Boolean> class is derived from the
-B<<Config::Objective::DataType> class, but it defines/overrides the
+B<Config::Objective::DataType> class, but it defines/overrides the
 following methods:
 
 =over 4
