@@ -237,7 +237,7 @@ B<Config::Objective>.  Its methods can be used to manipulate the
 encapsulated integer value from the config file.
 
 The B<Config::Objective::Integer> class is derived from the
-B<<Config::Objective::DataType> class, but it defines/overrides the
+B<Config::Objective::DataType> class, but it defines/overrides the
 following methods:
 
 =over 4
