@@ -28,6 +28,7 @@ on
 	lines
 
 ";
+special_str	"quoted with \"special\" characters";
 empty_string	"";
 
 ### string with no value
